Expanded `CurrentPrintJob` class
Significant expansion of the `CurrentPrintJob` class in the `MachineControlHub.Print` namespace, including new properties and methods, and the introduction of a new nested class `PrintProgressRecord`. The `PrintProgress` class has been removed, with its functionality integrated into `CurrentPrintJob`.
Changes in `BedTemperatureService.cs` and `HotendTemperatureService.cs` files include parameter modifications in the `BuildPIDAutoTuneCommand` method.
Lastly, `PrintHistory.razor` file has been updated with new text elements to display additional print details.

--- a/WebUIBlazor/Pages/ConnectionStatus.razor
+++ b/WebUIBlazor/Pages/ConnectionStatus.razor
@@ -2,7 +2,8 @@
 
 
 <MudAlert ContentAlignment="HorizontalAlignment.Center" Icon="@Icons.Material.Filled.PrivateConnectivity" Severity="@(Connection ? Severity.Success : Severity.Error)" Variant="Variant.Text">
-    @(new MarkupString(Connection ? $"Selected Printer:<strong>{SelectedPrinter}</strong> Status: <strong>Connected</strong>" : "Disconnected"))
+    @* @(new MarkupString(Connection ? $"Selected Printer:<strong>{SelectedPrinter}</strong> Status: <strong>Connected</strong>" : "Disconnected")) *@
+    @(new MarkupString(Connection ? $"<strong>Connected</strong>" : "Disconnected"))
 </MudAlert>
 
 
