--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -45,17 +45,19 @@
             background.ConnectionServiceSerial.IsConnected = true;
             background.ConnectionServiceSerial.Connect();
             printer.GetPrinterSettings();
+            printer.GetFirmwareSettings();
             //set the host keep alive command to 1 second after connection
             background.ConnectionServiceSerial.Write("M113 S1");
             //ask for bed volume
             background.ConnectionServiceSerial.Write("M211");
             //Report SD status every 2 seconds
             background.ConnectionServiceSerial.Write("M27 S2");
+            //report temperature every 1 seconds
+            background.ConnectionServiceSerial.Write("M155 S1");
         }
         catch (Exception e)
         {
             Console.WriteLine(e);
         }
     }
-
 }
