refactored code, and added new features
This commit includes a significant refactoring of the codebase, with the introduction of new services, methods, and properties, and the removal or replacement of others. Changed the names of some injected services. New properties and methods were added to various files.

--- a/WebUIBlazor/Pages/ConnectionStatus.razor
+++ b/WebUIBlazor/Pages/ConnectionStatus.razor
@@ -8,10 +8,23 @@
 
 
 @code {
-
     [Parameter]
     public bool Connection { get; set; }
 
     [Parameter]
     public string SelectedPrinter { get; set; }
+
+    protected override void OnInitialized()
+    {
+        background.ConnectionStatusChanged += UpdateConnectionStatus;
+    }
+
+    private void UpdateConnectionStatus()
+    {
+        InvokeAsync(() =>
+        {
+            Connection = background.ConnectionServiceSerial.IsConnected;
+            StateHasChanged();
+        });
+    }
 }
